[package]
name = "claude-history"
version = "0.1.0"
edition = "2024"
description = "Search Bash commands run by Claude Code across all project transcripts. Like `history`, but for your agent."
license = "MIT"
repository = "https://github.com/u6bkep/claude-history"
readme = "README.md"
keywords = ["claude", "claude-code", "history", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-history"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
walkdir = "2"
rayon = "1"
memchr = "2"

[profile.release]
lto = "thin"
codegen-units = 1
